# reno_rss

./: .env.example  .gitignore  .trivyignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  SPEC-CICD.md  SPEC-CICD.zh-CN.md  TECHNICAL.md  TECHNICAL.zh-CN.md
apps/api/: Dockerfile  alembic.ini  openapi.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_article_translation.py
apps/api/app/: __init__.py  export_openapi.py  main.py  seed.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: admin.py  articles.py  ask.py  auth.py  feeds.py  jobs.py  recommendations.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: __init__.py  auth_store.py  models.py
apps/api/app/domain/: ask_prompt.py  ranking.py
apps/api/tests/: conftest.py  test_admin.py  test_articles_api.py  test_ask.py  test_auth.py  test_feeds.py  test_health.py  test_jobs_api.py  test_ranking.py  test_schema_contract.py  test_scoring_batches.py  test_seed.py
apps/scorer-worker/: Dockerfile  pyproject.toml
apps/scorer-worker/sql/: 001_init_scoring.sql
apps/scorer-worker/src/: llm_client.py  main.py  miniflux_client.py  repository.py  scoring.py
apps/scorer-worker/src/scorer_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/scorer-worker/tests/: test_main_flow.py  test_miniflux_client.py  test_repository.py  test_scoring.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: content_quality.py  main.py  runner.py
apps/worker/app/benchmark/: __init__.py  db_perf.py  ranking.py
apps/worker/app/db/: __init__.py  article_sink.py  content_sink.py  recommendation_sink.py  score_sink.py
apps/worker/app/jobs/: fetch_content.py  generate_recommendations.py  queue.py  run_benchmark.py  score_batch.py  sync_miniflux.py  translate_article.py
apps/worker/app/providers/: __init__.py  external_content.py  llm.py  miniflux.py
apps/worker/tests/: conftest.py  test_article_sink.py  test_benchmark.py  test_content_quality.py  test_content_sink.py  test_fetch_content.py  test_miniflux_provider.py  test_queue.py  test_queue_postgres.py  test_recommendations.py  test_runner.py  test_score_sink.py  test_scoring.py  test_sinks_postgres.py  test_sync_miniflux.py  test_translate_article.py
(+154 files in other folders)
