[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-reader-worker"
version = "0.4.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

# Keep packaging explicit so adding a sibling top-level dir later (e.g.
# alembic/) cannot break setuptools flat-layout auto-discovery.
[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
